// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Illustration /> Scene BrandMomentError should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/brand-moments-error.png"
  />
</div>
`;

exports[`<Illustration /> Scene BrandMomentLogin should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/brand-moments-login.png"
  />
</div>
`;

exports[`<Illustration /> Scene BrandMomentNewAccountOnboarding should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/brand-moments-new-account-onboarding.svg"
  />
</div>
`;

exports[`<Illustration /> Scene BrandMomentPositiveOutro should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/brand-moments-positive-outro.png"
  />
</div>
`;

exports[`<Illustration /> Scene BrandMomentStarterKit should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/brand-moments-starter-kit.svg"
  />
</div>
`;

exports[`<Illustration /> Scene BrandMomentUploadEmployeeData should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/brand-moments-upload-employee-data.svg"
  />
</div>
`;

exports[`<Illustration /> Scene Collaboration should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/miscellaneous-collaboration.svg"
  />
</div>
`;

exports[`<Illustration /> Scene Communication should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/miscellaneous-communications.svg"
  />
</div>
`;

exports[`<Illustration /> Scene CompanyValues should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/miscellaneous-company-values.svg"
  />
</div>
`;

exports[`<Illustration /> Scene ConnectTheDots should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/miscellaneous-connect-the-dots.svg"
  />
</div>
`;

exports[`<Illustration /> Scene CultureLab should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/miscellaneous-culture-lab.svg"
  />
</div>
`;

exports[`<Illustration /> Scene EmptyStatesAction should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/empty-states-action.svg"
  />
</div>
`;

exports[`<Illustration /> Scene EmptyStatesInformative should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/empty-states-informative.svg"
  />
</div>
`;

exports[`<Illustration /> Scene EmptyStatesNegative should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/empty-states-negative.svg"
  />
</div>
`;

exports[`<Illustration /> Scene EmptyStatesNeutral should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/empty-states-neutral.svg"
  />
</div>
`;

exports[`<Illustration /> Scene EmptyStatesPositive should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/empty-states-positive.svg"
  />
</div>
`;

exports[`<Illustration /> Scene EngagementSurveySummaryFemale should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/engagement-survey-summary-female.svg"
  />
</div>
`;

exports[`<Illustration /> Scene EngagementSurveySummaryMale should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/engagement-survey-summary-male.svg"
  />
</div>
`;

exports[`<Illustration /> Scene Information360Upgrade should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/information-modals-360-upgrade.svg"
  />
</div>
`;

exports[`<Illustration /> Scene InformationDemographicFocus should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/information-modals-demographic-focus.svg"
  />
</div>
`;

exports[`<Illustration /> Scene InformationEmergingTrends should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/information-modals-emerging-trends.svg"
  />
</div>
`;

exports[`<Illustration /> Scene InformationEmployeeLifecycle should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/information-modals-employee-lifecycle.svg"
  />
</div>
`;

exports[`<Illustration /> Scene InformationReportOwner should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/information-modals-report-owner.svg"
  />
</div>
`;

exports[`<Illustration /> Scene InformationReportOwnerByRule should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/information-modals-report-owner-by-rule.svg"
  />
</div>
`;

exports[`<Illustration /> Scene InformationTurnoverCalculator should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/information-modals-turnover-calculator.svg"
  />
</div>
`;

exports[`<Illustration /> Scene InformationTurnoverForecast should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/information-modals-turnover-forecast.svg"
  />
</div>
`;

exports[`<Illustration /> Scene PerformanceCompanySettings should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/performance-company-settings.svg"
  />
</div>
`;

exports[`<Illustration /> Scene Programs should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/engagement-programs.svg"
  />
</div>
`;

exports[`<Illustration /> Scene SkillsCoach1On1Meetings should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-1-on-1-meetings.svg"
  />
</div>
`;

exports[`<Illustration /> Scene SkillsCoachCoaching should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-coaching.svg"
  />
</div>
`;

exports[`<Illustration /> Scene SkillsCoachEmployeeDevelopment should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-employee-development.svg"
  />
</div>
`;

exports[`<Illustration /> Scene SkillsCoachEssentialFeedback should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-essential-feedback.svg"
  />
</div>
`;

exports[`<Illustration /> Scene SkillsCoachEssentialProductivity should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-essential-productivity.svg"
  />
</div>
`;

exports[`<Illustration /> Scene SkillsCoachEssentialResilience should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-essential-resilience.svg"
  />
</div>
`;

exports[`<Illustration /> Scene SkillsCoachFeedback should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-feedback.svg"
  />
</div>
`;

exports[`<Illustration /> Scene SkillsCoachInfluentialCommunication should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-influential-communication.svg"
  />
</div>
`;

exports[`<Illustration /> Scene SkillsCoachLeadingChange should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-leading-change.svg"
  />
</div>
`;

exports[`<Illustration /> Scene SkillsCoachManagerHub should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-manager-hub.svg"
  />
</div>
`;

exports[`<Illustration /> Scene SkillsCoachProductivity should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-productivity.svg"
  />
</div>
`;

exports[`<Illustration /> Scene SkillsCoachRemoteManager should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-remote-manager.svg"
  />
</div>
`;

exports[`<Illustration /> Scene SkillsCoachResilience should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-resilience.svg"
  />
</div>
`;

exports[`<Illustration /> Scene SkillsCoachStrategy should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/skills-coach-strategy.svg"
  />
</div>
`;

exports[`<Illustration /> Scene SurveyGetStarted should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/getting-started.svg"
  />
</div>
`;

exports[`<Illustration /> Scene SurveyOverviewClosed should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/survey-overview-closed.svg"
  />
</div>
`;

exports[`<Illustration /> Scene TermsAgreement should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/scene/miscellaneous-terms-agreement.svg"
  />
</div>
`;

exports[`<Illustration /> Spot AccountBasics should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/new-account-account-basics.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Action should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-action.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ActionPlans should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-action-plans.svg"
  />
</div>
`;

exports[`<Illustration /> Spot AddImage should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-add-image.svg"
  />
</div>
`;

exports[`<Illustration /> Spot AddUser should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/new-account-add-user.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Alarm should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-alarm.svg"
  />
</div>
`;

exports[`<Illustration /> Spot AmplifyOthers should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/values-amplify-others.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Assertive should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/moods-assertive.svg"
  />
</div>
`;

exports[`<Illustration /> Spot BCorp should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-b-corp.svg"
  />
</div>
`;

exports[`<Illustration /> Spot BaselineSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-baseline-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Behaviour should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-behavior.svg"
  />
</div>
`;

exports[`<Illustration /> Spot BenefitsSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-benefits-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot BlankSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-blank-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot CalendarSync should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-calendar-sync.svg"
  />
</div>
`;

exports[`<Illustration /> Spot CandidateSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-candidate-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Cautionary should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/moods-cautionary.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ChangeAgents should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-change-agents.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ChangeReadiness should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-change-readiness.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ChangeSuccess should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-change-success.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Coaching should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-coaching.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Communications should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-communications.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Community should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-community.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Company should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-company.svg"
  />
</div>
`;

exports[`<Illustration /> Spot CompanyDetails should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/new-account-company-details.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Conversations should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-conversations.svg"
  />
</div>
`;

exports[`<Illustration /> Spot CustomOnboardSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-custom-onboard-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot CustomSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-custom-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot CustomUnattributedSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-custom-unattributed-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot DataVisualization should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-data-visualization.svg"
  />
</div>
`;

exports[`<Illustration /> Spot EmergencyResponse should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-emergency-response.svg"
  />
</div>
`;

exports[`<Illustration /> Spot EmployeeData should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/new-account-employee-data.svg"
  />
</div>
`;

exports[`<Illustration /> Spot EndOfProbation should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-end-of-probation.svg"
  />
</div>
`;

exports[`<Illustration /> Spot EngagementSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-engagement-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot EssentialProductivity should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-essential-productivity.svg"
  />
</div>
`;

exports[`<Illustration /> Spot EssentialResilience should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-essential-resillience.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ExecutiveReportSharing should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-executive-report-sharing.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ExitSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-exit-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot FastAction should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-fast-action.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Feedback should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-feedback.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Fire should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-fire.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Fireworks should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-fireworks.svg"
  />
</div>
`;

exports[`<Illustration /> Spot FullImport should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-full-import.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Gdpr should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/new-account-gdpr.svg"
  />
</div>
`;

exports[`<Illustration /> Spot GeneralOnboardSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-general-onboard-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Goals should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-goals.svg"
  />
</div>
`;

exports[`<Illustration /> Spot HaveTheCourageToBeVulnerable should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/values-have-the-courage-to-be-vulnerable.svg"
  />
</div>
`;

exports[`<Illustration /> Spot HealthAndSafety should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-health-and-safety.svg"
  />
</div>
`;

exports[`<Illustration /> Spot HrisImport should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-hris-import.svg"
  />
</div>
`;

exports[`<Illustration /> Spot InclusionSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-inclusion-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Individual180 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-individual-180.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Individual360 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-individual-360.svg"
  />
</div>
`;

exports[`<Illustration /> Spot InfluentialCommunication should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-influential-communication.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Informative should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/moods-informative.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Insights should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-insights.svg"
  />
</div>
`;

exports[`<Illustration /> Spot InternSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-intern-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot LeaderReportSharing should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-leader-report-sharing.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Leadership180 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-leadership-180.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Leadership360 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-leadership-360.svg"
  />
</div>
`;

exports[`<Illustration /> Spot LeadingChange should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-leading-change.svg"
  />
</div>
`;

exports[`<Illustration /> Spot LeadingThroughCrisis should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-leading-through-crisis.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Learn should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-learn.svg"
  />
</div>
`;

exports[`<Illustration /> Spot LearnFasterThroughFeedback should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/values-learn-faster-through-feedback.svg"
  />
</div>
`;

exports[`<Illustration /> Spot London should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/offices-london.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Manager180 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-manager-180.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Manager360 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-manager-360.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ManagerLearning should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-manager-learning.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ManagerReportSharing should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-manager-report-sharing.svg"
  />
</div>
`;

exports[`<Illustration /> Spot MeetingVoices should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-meeting-voices.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Melbourne should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/offices-melbourne.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Microphone should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-microphone.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Negative should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/moods-negative.svg"
  />
</div>
`;

exports[`<Illustration /> Spot NewWaysOfWorking should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-new-ways-of-working.svg"
  />
</div>
`;

exports[`<Illustration /> Spot NewYork should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/offices-new-york.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Objective should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-objective.svg"
  />
</div>
`;

exports[`<Illustration /> Spot OneOnOne should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-1-on-1.svg"
  />
</div>
`;

exports[`<Illustration /> Spot PaperPen should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-paper-pen.svg"
  />
</div>
`;

exports[`<Illustration /> Spot PartialImport should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-partial-import.svg"
  />
</div>
`;

exports[`<Illustration /> Spot PerformanceDiagnostics should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-performance-diagnostics.svg"
  />
</div>
`;

exports[`<Illustration /> Spot PhasedWeek1OnboardSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-phased-week-1-onboard-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot PhasedWeek5OnboardSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-phased-week-5-onboard-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Positive should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/moods-positive.svg"
  />
</div>
`;

exports[`<Illustration /> Spot PositiveFemale should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/moods-positive.svg"
  />
</div>
`;

exports[`<Illustration /> Spot PositiveMale should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/moods-positive.svg"
  />
</div>
`;

exports[`<Illustration /> Spot PowerfulInsights should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-powerful-insights.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Privacy should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-privacy.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Process should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-process.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Productivity should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-productivity.svg"
  />
</div>
`;

exports[`<Illustration /> Spot PulseSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-pulse-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot QuickEngagementSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-quick-engagement-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ReOnboarding should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-re-onboarding.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ReadArticle should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-read-article.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Recommendation should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-recommendation.svg"
  />
</div>
`;

exports[`<Illustration /> Spot RemoteManager should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-remote-manager.svg"
  />
</div>
`;

exports[`<Illustration /> Spot RemoteOnboardSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-remote-onboard-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot RemoteWorkQSet should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-remote-work-q-set.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ReportSharing should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-report-sharing.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Resilience should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-resilience.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Resources should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-resources.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Response should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-response.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ReturnToWorkplace should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-return-to-workplace.svg"
  />
</div>
`;

exports[`<Illustration /> Spot SanFrancisco should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/offices-san-francisco.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ScienceBackedTools should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-science-backed-tools.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ShareReport should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-share-report.svg"
  />
</div>
`;

exports[`<Illustration /> Spot SinglePointOnboardSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-single-point-onboard-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot SkillsDevelopment should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-skills-development.svg"
  />
</div>
`;

exports[`<Illustration /> Spot SpreadsheetTemplate should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-spreadsheet-template.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Starburst should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-starburst.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Stop should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-stop.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Strategy should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/skills-coach-strategy.svg"
  />
</div>
`;

exports[`<Illustration /> Spot TakeAim should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-take-aim.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Team1 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-team-1.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Team2 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-team-2.svg"
  />
</div>
`;

exports[`<Illustration /> Spot TeamEffectiveness1 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-team-effectiveness-1.svg"
  />
</div>
`;

exports[`<Illustration /> Spot TeamEffectiveness2 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-team-effectiveness-2.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Templates should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-templates.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Timezone should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/new-account-timezone.svg"
  />
</div>
`;

exports[`<Illustration /> Spot TrafficCone should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-traffic-cone.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Training1 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-training-1.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Training2 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-training-2.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Training3 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-training-3.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Trophy should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-trophy.svg"
  />
</div>
`;

exports[`<Illustration /> Spot TrustOthersToMakeDecisions should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/values-trust-others-to-make-decisions.svg"
  />
</div>
`;

exports[`<Illustration /> Spot UnderConstruction should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-under-construction.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ValueAdd should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-value-add.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ValuesSurvey1 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-values-survey-1.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ValuesSurvey2 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-values-survey-2.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Video should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-video.svg"
  />
</div>
`;

exports[`<Illustration /> Spot ViewReports should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-view-reports.svg"
  />
</div>
`;

exports[`<Illustration /> Spot WellbeingSurvey should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-wellbeing-survey.svg"
  />
</div>
`;

exports[`<Illustration /> Spot WellbeingSurvey1 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-wellbeing-survey-1.svg"
  />
</div>
`;

exports[`<Illustration /> Spot WellbeingSurvey2 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-wellbeing-survey-2.svg"
  />
</div>
`;

exports[`<Illustration /> Spot WellbeingSurvey3 should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/template-library-wellbeing-survey-3.svg"
  />
</div>
`;

exports[`<Illustration /> Spot Workshop should exist and render an alt tag 1`] = `
<div>
  <img
    alt="My accessible title"
    class="wrapper"
    src="https://d1e7r7b0lb8p4d.cloudfront.net/illustrations/heart/spot/miscellaneous-workshop.svg"
  />
</div>
`;
